--- a/app/src/main/res/layout/view_movie.xml
+++ b/app/src/main/res/layout/view_movie.xml
@@ -4,6 +4,17 @@
     android:layout_width="match_parent"
     android:layout_height="80dp">
 
+    <ImageView
+        android:id="@+id/movieImage"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:adjustViewBounds="true"
+        android:scaleType="centerCrop"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
     <TextView
         android:id="@+id/movieTitle"
         android:layout_width="0dp"
