--- a/app/src/main/res/layout/view_movie.xml
+++ b/app/src/main/res/layout/view_movie.xml
@@ -17,12 +17,16 @@
 
     <TextView
         android:id="@+id/movieTitle"
-        android:layout_width="0dp"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
+        android:background="@android:color/black"
         android:text="@string/placeholder_movie_title"
+        android:textColor="@android:color/white"
         android:textSize="24sp"
+        android:ellipsize="end"
+        android:maxLines="1"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
