Added custom font family
Keeping font out of public repository for copyright reasons.

--- a/app/src/main/res/layout/view_movie.xml
+++ b/app/src/main/res/layout/view_movie.xml
@@ -22,11 +22,12 @@
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
         android:background="@android:color/black"
+        android:ellipsize="end"
+        android:fontFamily="@font/politica_bold"
+        android:maxLines="1"
         android:text="@string/placeholder_movie_title"
         android:textColor="@android:color/white"
         android:textSize="24sp"
-        android:ellipsize="end"
-        android:maxLines="1"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
